Update wording and formatting

--- a/notebooks/table_profiler_sqlserver.ipynb
+++ b/notebooks/table_profiler_sqlserver.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "01e56825-bb39-4607-9b73-f3c237655cc5",
      "showTitle": false,
@@ -14,40 +17,32 @@
    },
    "source": [
     "# Table Partition Column Profiler \n",
-    "\n",
-    "\n",
-    "\n",
     "This notebook helps identify the best partition column for ingesting large tables from SQL Server into Databricks using the Lakefed Ingest tool.\n",
     "\n",
     "### Prerequisites\n",
-    "\n",
     "- `USE CONNECTION` privilege on the foreign catalog connection\n",
     "- `SELECT` privilege on the source SQL Server tables\n",
-    "- Access to a compute cluster with DBR 17.3+\n",
+    "- Access to a compute cluster with DBR 17.3+ to take advantate of `remote_query()`. Can fall back to Lakehouse Federation if not available.\n",
     "- Foreign catalog configured for SQL Server connection\n",
     "\n",
-    "#### **Requirements for `remote_query()`:**\n",
-    "\n",
+    "#### Requirements for `remote_query()`:\n",
     "- Unity Catalog enabled workspace\n",
-    "\n",
     "- Network connectivity from your Databricks Runtime cluster or SQL warehouse to the target database systems. [See Networking recommendations for Lakehouse Federation.](https://docs.databricks.com/aws/en/query-federation/networking)\n",
     "- Databricks clusters must use Databricks Runtime 17.3 or above.\n",
     "\n",
     "**Permissions required:**\n",
-    "\n",
     "- To use the remote_query function, you must have the `USE CONNECTION` privilege on the connection or the `SELECT` privilege on a view that wraps the function. \n",
     "- Single-user clusters also require the `MANAGE` permission on the connection.\n",
     "\n",
-    "> Note - `remote_query()` vs Federation - `remote_query()` pushes computation to SQL Server (preferred for large tables)\n",
-    " > whereas, direct federation through foreign catalogs pulls data to Databricks.\n",
+    "> Note - `remote_query()` vs Federation - `remote_query()` pushes down the entire query to SQL Server (preferred for large tables). Federated queries are not always pushed down and may be slower.  \n",
     "> This notebook provides both options - use remote_query when available. Refer documentation [here](https://docs.databricks.com/aws/en/query-federation/remote-queries).\n",
     "\n",
     "**Key considerations:**\n",
-    "- Having a clustered index on the cluster/partition column on the sql server side is mandatory for ingestion performance\n",
-    "- Clustered Primary Keys are IDEAL partition columns (perfect distribution, zero skew). This profiler is most useful for tables without a clustered primary key\n",
-    "- Only integer columns are considered (timestamps/floats cause issues)\n",
-    "- Tables >10TB should use sampling mode for performance\n",
-    "- Standard partition size of 2048MB is recommended for ETL workloads"
+    "- Selecting a partition column with an index on the SQL Server side is necessary in order to achieve reasonable performance.\n",
+    "- Primary Keys with clustered indexes are IDEAL partition columns (Great distribution / no skew). This profiler is most useful for tables without a clustered primary key.\n",
+    "- Only integer columns are considered (timestamps/floats cause issues).\n",
+    "- Tables >10TB should use sampling mode for performance.\n",
+    "- Default partition size of 2048MB is recommended for partitioned ingestion."
    ]
   },
   {
@@ -72,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mode: remote_query\nTable: sqlserver_edwia_catalog.dbo.store_sales_1tb\nSampling: Disabled\nConfiguration:\n  Mode: remote_query\n  Catalog: sqlserver_edwia_catalog\n  Table: dbo.store_sales_1tb\n  Sampling: Disabled\n"
+      "Mode: remote_query\nTable: lakefed_sqlserver.saleslt.salesorderdetail\nSampling: Disabled\nConfiguration:\n  Mode: remote_query\n  Catalog: lakefed_sqlserver\n  Table: saleslt.salesorderdetail\n  Sampling: Disabled\n"
      ]
     }
    ],
@@ -108,7 +103,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "4d1ff425-f00e-4db2-b812-0ac324a6493a",
      "showTitle": false,
@@ -143,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No clustered primary key found.\nAnalyzing alternative columns...\n"
+      "============================================================\n✅ FOUND CLUSTERED PRIMARY KEY - USE THIS!\n============================================================\n\nColumn: SalesOrderDetailID\nType: int\n\nWhy this is ideal:\n  • Great distribution / no skew\n  • Index for fast MIN/MAX\n\nRecommended Configuration:\n\nUPDATE control_table\nSET \n    partition_col = 'SalesOrderDetailID',\n    partition_size_mb = 2048,\n    load_partitioned = true\nWHERE src_table = 'salesorderdetail';\n\n"
      ]
     }
    ],
@@ -183,9 +181,8 @@
     "    print(f\"\\nColumn: {pk_column}\")\n",
     "    print(f\"Type: {clustered_pk[0]['data_type']}\")\n",
     "    print(\"\\nWhy this is ideal:\")\n",
-    "    print(\"  • Perfect distribution (sequential)\")\n",
-    "    print(\"  • Zero skew\")\n",
-    "    print(\"  • Already indexed for fast MIN/MAX\")\n",
+    "    print(\"  • Great distribution / no skew\")\n",
+    "    print(\"  • Index for fast MIN/MAX\")\n",
     "    print(\"\\nRecommended Configuration:\")\n",
     "    print(f\"\"\"\n",
     "UPDATE control_table\n",
@@ -218,16 +215,7 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 2 candidates to analyze: ss_item_sk, ss_sold_date_sk\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not SKIP_PROFILING:\n",
     "    # Find indexed integer columns\n",
@@ -276,7 +264,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "042d6a15-cf8e-4a00-85b8-2b2fdd547901",
      "showTitle": false,
@@ -307,125 +298,41 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1/2] Profiling ss_item_sk... ✓ Skew: 2.1x\n[2/2] Profiling ss_sold_date_sk... ✓ Skew: 21.6x\n"
-     ]
-    },
-    {
      "output_type": "display_data",
      "data": {
-      "text/html": [
-       "<style scoped>\n",
-       "  .table-result-container {\n",
-       "    max-height: 300px;\n",
-       "    overflow: auto;\n",
-       "  }\n",
-       "  table, th, td {\n",
-       "    border: 1px solid black;\n",
-       "    border-collapse: collapse;\n",
-       "  }\n",
-       "  th, td {\n",
-       "    padding: 5px;\n",
-       "  }\n",
-       "  th {\n",
-       "    text-align: left;\n",
-       "  }\n",
-       "</style><div class='table-result-container'><table class='table-result'><thead style='background-color: white'><tr><th>column_name</th><th>total_rows</th><th>distinct_values</th><th>null_percentage</th><th>min_value</th><th>max_value</th><th>avg_rows_per_value</th><th>max_rows_per_value</th></tr></thead><tbody><tr><td>ss_item_sk</td><td>7031221350</td><td>402000</td><td>0.0</td><td>1</td><td>402000</td><td>17490</td><td>36780</td></tr><tr><td>ss_sold_date_sk</td><td>7031221350</td><td>1827</td><td>0.0</td><td>2450816</td><td>2452642</td><td>3848506</td><td>83202375</td></tr></tbody></table></div>"
+      "text/plain": [
+       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m\n",
+       "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)\n",
+       "File \u001B[0;32m<command-6333049142013510>, line 178\u001B[0m\n",
+       "\u001B[1;32m    174\u001B[0m             result \u001B[38;5;241m=\u001B[39m {\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mcolumn_name\u001B[39m\u001B[38;5;124m'\u001B[39m: column, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124merror\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[38;5;28mstr\u001B[39m(e)}\n",
+       "\u001B[1;32m    176\u001B[0m         results\u001B[38;5;241m.\u001B[39mappend(result)\n",
+       "\u001B[0;32m--> 178\u001B[0m results_df \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mDataFrame(results)\n",
+       "\u001B[1;32m    179\u001B[0m display(results_df)\n",
+       "\n",
+       "\u001B[0;31mNameError\u001B[0m: name 'pd' is not defined"
       ]
      },
      "metadata": {
       "application/vnd.databricks.v1+output": {
        "addedWidgets": {},
-       "aggData": [],
-       "aggError": "",
-       "aggOverflow": false,
-       "aggSchema": [],
-       "aggSeriesLimitReached": false,
-       "aggType": "",
        "arguments": {},
-       "columnCustomDisplayInfos": {},
-       "data": [
-        [
-         "ss_item_sk",
-         7031221350,
-         402000,
-         0.0,
-         1,
-         402000,
-         17490,
-         36780
-        ],
-        [
-         "ss_sold_date_sk",
-         7031221350,
-         1827,
-         0.0,
-         2450816,
-         2452642,
-         3848506,
-         83202375
-        ]
-       ],
        "datasetInfos": [],
-       "dbfsResultPath": null,
-       "isJsonSchema": true,
-       "metadata": {},
-       "overflow": false,
-       "plotOptions": {
-        "customPlotOptions": {},
-        "displayType": "table",
-        "pivotAggregation": null,
-        "pivotColumns": null,
-        "xColumns": null,
-        "yColumns": null
+       "jupyterProps": {
+        "ename": "NameError",
+        "evalue": "name 'pd' is not defined"
+       },
+       "metadata": {
+        "errorSummary": "<span class='ansi-red-fg'>NameError</span>: name 'pd' is not defined"
        },
        "removedWidgets": [],
-       "schema": [
-        {
-         "metadata": "{}",
-         "name": "column_name",
-         "type": "\"string\""
-        },
-        {
-         "metadata": "{}",
-         "name": "total_rows",
-         "type": "\"long\""
-        },
-        {
-         "metadata": "{}",
-         "name": "distinct_values",
-         "type": "\"long\""
-        },
-        {
-         "metadata": "{}",
-         "name": "null_percentage",
-         "type": "\"double\""
-        },
-        {
-         "metadata": "{}",
-         "name": "min_value",
-         "type": "\"long\""
-        },
-        {
-         "metadata": "{}",
-         "name": "max_value",
-         "type": "\"long\""
-        },
-        {
-         "metadata": "{}",
-         "name": "avg_rows_per_value",
-         "type": "\"long\""
-        },
-        {
-         "metadata": "{}",
-         "name": "max_rows_per_value",
-         "type": "\"long\""
-        }
+       "sqlProps": null,
+       "stackFrames": [
+        "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+        "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+        "File \u001B[0;32m<command-6333049142013510>, line 178\u001B[0m\n\u001B[1;32m    174\u001B[0m             result \u001B[38;5;241m=\u001B[39m {\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mcolumn_name\u001B[39m\u001B[38;5;124m'\u001B[39m: column, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124merror\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[38;5;28mstr\u001B[39m(e)}\n\u001B[1;32m    176\u001B[0m         results\u001B[38;5;241m.\u001B[39mappend(result)\n\u001B[0;32m--> 178\u001B[0m results_df \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mDataFrame(results)\n\u001B[1;32m    179\u001B[0m display(results_df)\n",
+        "\u001B[0;31mNameError\u001B[0m: name 'pd' is not defined"
        ],
-       "type": "table"
+       "type": "baseError"
       }
      },
      "output_type": "display_data"
@@ -433,7 +340,6 @@
    ],
    "source": [
     "if not SKIP_PROFILING and candidate_columns:\n",
-    "    import pandas as pd\n",
     "    \n",
     "    # Helper function\n",
     "    def tsql_ident(name: str) -> str:\n",
@@ -618,7 +524,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "80e44253-b0ec-476e-a2ff-10bc91b907f9",
      "showTitle": false,
@@ -752,9 +661,7 @@
     }
    ],
    "source": [
-    "# MAGIC ### Evaluate Columns Based on Skew and Nulls\n",
-    "\n",
-    "# COMMAND ----------\n",
+    "# Evaluate Columns Based on Skew and Nulls\n",
     "\n",
     "if not SKIP_PROFILING and not results_df.empty:\n",
     "    \n",
@@ -852,9 +759,7 @@
     }
    ],
    "source": [
-    "# MAGIC ### Configuration Recommendations\n",
-    "\n",
-    "# COMMAND ----------\n",
+    "# Configuration Recommendations\n",
     "\n",
     "print(\"=\" * 60)\n",
     "print(\"PARTITION COLUMN RECOMMENDATION\")\n",
@@ -886,7 +791,7 @@
     "UPDATE control_table\n",
     "SET \n",
     "    partition_col = '{best['column_name']}',\n",
-    "    partition_size_mb = 2048,  -- Standard ETL practice\n",
+    "    partition_size_mb = 2048,\n",
     "    load_partitioned = true\n",
     "WHERE src_table = '{src_table}';\n",
     "\"\"\")\n",
@@ -921,7 +826,7 @@
    "notebookName": "table_profiler_sqlserver",
    "widgets": {
     "connection_name": {
-     "currentValue": "sqlserver_edwia",
+     "currentValue": "lakefed_sqldb",
      "nuid": "340768eb-6e60-4ac6-85a6-f215d8f7df0d",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -947,7 +852,7 @@
      }
     },
     "sql_database": {
-     "currentValue": "DatabricksTestDB",
+     "currentValue": "lakefed",
      "nuid": "65162289-356f-4952-a8d9-8284590d70bc",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -973,7 +878,7 @@
      }
     },
     "src_catalog": {
-     "currentValue": "sqlserver_edwia_catalog",
+     "currentValue": "lakefed_sqlserver",
      "nuid": "361315fc-07cc-4324-a133-991dd63e357e",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -999,7 +904,7 @@
      }
     },
     "src_schema": {
-     "currentValue": "dbo",
+     "currentValue": "saleslt",
      "nuid": "ab2bdb88-8ab5-4e92-81f4-d3db0ccf5b7b",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -1025,7 +930,7 @@
      }
     },
     "src_table": {
-     "currentValue": "store_sales_1tb",
+     "currentValue": "salesorderdetail",
      "nuid": "b7fa467f-39ad-44a2-9035-23e8c95634ad",
      "typedWidgetInfo": {
       "autoCreated": false,
