--- a/notebooks/table_profiler_sqlserver.ipynb
+++ b/notebooks/table_profiler_sqlserver.ipynb
@@ -174,7 +174,7 @@
     "    load_partitioned = true\n",
     "WHERE src_table = '{src_table}';\n",
     "\"\"\")\n",
-    "    SKIP_PROFILING = True\n",
+    "    SKIP_PROFILING = False\n",
     "else:\n",
     "    print(\"No clustered primary key found.\")\n",
     "    print(\"Analyzing alternative columns...\")\n",
