convert python functions to sql

--- a/src/lakefed_ingest/generate_partitions.ipynb
+++ b/src/lakefed_ingest/generate_partitions.ipynb
@@ -10,56 +10,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "45ab3641-09f0-476e-9c1b-1e69957ee78c",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from lakefed_ingest.main import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "2357b38e-5f3e-4477-b84d-776773c8bd0d",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "src_type = dbutils.widgets.get('src_type')\n",
-    "src_catalog = dbutils.widgets.get('src_catalog')\n",
-    "src_schema = dbutils.widgets.get('src_schema')\n",
-    "src_table = dbutils.widgets.get('src_table')\n",
-    "partition_col = dbutils.widgets.get('partition_col')\n",
-    "partition_size_mb = int(dbutils.widgets.get('partition_size_mb'))\n",
-    "tgt_catalog = dbutils.widgets.get('tgt_catalog')\n",
-    "tgt_schema = dbutils.widgets.get('tgt_schema')\n",
-    "tgt_table = dbutils.widgets.get('tgt_table')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "ad06769d-e2a5-4474-a3ab-e2c335539074",
      "showTitle": true,
      "tableResultSettingsMap": {},
@@ -68,9 +18,15 @@
    },
    "outputs": [],
    "source": [
-    "# Get size of source table. Table size and the specified partition size\n",
-    "# are used to calculate the approximate size of each individual query.\n",
-    "table_size_mb = get_table_size(src_catalog, src_schema, src_table, src_type)"
+    "-- Get size of source table. Table size and the specified partition size\n",
+    "-- are used to calculate the approximate size of each individual query.\n",
+    "use catalog identifier(:ctrl_catalog);\n",
+    "use schema identifier(:ctrl_schema);\n",
+    "\n",
+    "declare or replace table_size_mb int;\n",
+    "call get_table_size(:src_type, :src_catalog, :src_schema, :src_table, table_size_mb);\n",
+    "\n",
+    "select table_size_mb;"
    ]
   },
   {
@@ -91,10 +47,16 @@
    },
    "outputs": [],
    "source": [
-    "# Get the lower and upper bound values of the partition column\n",
-    "lower_bound, upper_bound = get_partition_boundaries(src_catalog, src_schema, src_table, partition_col)\n",
+    "-- Get the lower and upper bound values of the partition column\n",
+    "use catalog identifier(:ctrl_catalog);\n",
+    "use schema identifier(:ctrl_schema);\n",
     "\n",
-    "print(f'Upper and lower bound: {lower_bound}, {upper_bound}')"
+    "declare or replace partition_col_type string;\n",
+    "declare or replace partition_col_bounds struct<lower: string, upper: string>;\n",
+    "\n",
+    "call get_partition_col_bounds(:src_catalog, :src_schema, :src_table, :partition_col, partition_col_type, partition_col_bounds);\n",
+    "\n",
+    "select partition_col_bounds.lower, partition_col_bounds.upper;"
    ]
   },
   {
@@ -109,17 +71,24 @@
      "inputWidgets": {},
      "nuid": "ca88b99e-bed5-4f9b-a158-769d0627d2ca",
      "showTitle": true,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "2": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1764043934058}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 2
+      }
+     },
      "title": "Calculate Number of Partitions"
     }
    },
    "outputs": [],
    "source": [
-    "# Calculate number of partitions. Minimum is 2.\n",
-    "num_partitions = int(table_size_mb / partition_size_mb)\n",
-    "num_partitions = max(num_partitions, 2)\n",
+    "-- Calculate number of partitions. Minimum is 2.\n",
+    "declare or replace num_partitions integer;\n",
+    "set var num_partitions = greatest((table_size_mb / :partition_size_mb)::int, 2);\n",
     "\n",
-    "print(f'Number of partitions: {num_partitions}')"
+    "select num_partitions;"
    ]
   },
   {
@@ -132,64 +101,42 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "1f102639-3067-44bb-b66d-d1beb3f718be",
-     "showTitle": true,
-     "tableResultSettingsMap": {},
-     "title": "Generate Partitions"
+     "nuid": "e965491f-3ae7-4380-9f32-e7fb5448f611",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "2": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1764188184213}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 2
+      }
+     },
+     "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "# Generate partition list\n",
-    "partition_list = get_partition_list(\n",
-    "    partition_col,\n",
-    "    lower_bound,\n",
-    "    upper_bound,\n",
-    "    num_partitions\n",
-    ")\n",
+    "-- Get list of partitions (Query where clauses)\n",
+    "declare or replace num_batches int;\n",
+    "set var num_batches = ceiling(num_partitions / 1000);\n",
     "\n",
-    "partitions_tbl = f'{tgt_catalog}.{tgt_schema}.{tgt_table}_partitions'\n",
-    "\n",
-    "# Write partitions to table\n",
-    "partition_df = get_partition_df(partition_list, num_partitions, 1000)\n",
-    "partition_df.write.option(\"overwriteSchema\", \"true\").mode(\"overwrite\").saveAsTable(partitions_tbl)"
+    "select get_partition_list('inv_item_sk', 'date', unix_timestamp('2020-01-01', 'yyyy-MM-dd'), unix_timestamp('2025-12-31', 'yyyy-MM-dd'), num_partitions) as json_list\n",
+    "|> select explode(from_json(json_list, 'array<struct<id:int, where_clause:string>>')) AS col\n",
+    "|> select col.id, col.where_clause\n",
+    "|> extend ntile(num_batches) over (order by id) AS batch_number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "8161587c-6966-4f3a-9689-5373f9f3bd2f",
-     "showTitle": true,
-     "tableResultSettingsMap": {},
-     "title": "Get List of Batches"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Get list of ids\n",
-    "partitions_qry = f\"\"\"\\\n",
-    "    select\n",
-    "      sort_array(array_agg(distinct batch_id)) as batch_ids,\n",
-    "      count(where_clause) as cnt_partitions\n",
-    "    from {partitions_tbl}\n",
-    "\"\"\"\n",
-    "\n",
-    "partitions_df = spark.sql(partitions_qry)\n",
-    "batch_id_list = partitions_df.collect()[0]['batch_ids']\n",
-    "cnt_partitions = partitions_df.collect()[0]['cnt_partitions']\n",
-    "\n",
-    "print(f'Count of batches: {len(batch_id_list)}')\n",
-    "print(f'Count of partitions: {cnt_partitions}')\n",
-    "\n",
-    "# Assign id list to job task value to make it available to a for each task.\n",
-    "dbutils.jobs.taskValues.set(key=\"batch_id_list\", value=batch_id_list)"
+    "-- Get list of batches\n",
+    "select distinct\n",
+    "  batch_id\n",
+    "from identifier(src_catalog || '.' || src_schema || '.' || src_table || '_partitions')\n",
+    "order by batch_id"
    ]
   }
  ],
@@ -199,7 +146,7 @@
    "dashboards": [],
    "environmentMetadata": null,
    "inputWidgetPreferences": null,
-   "language": "python",
+   "language": "sql",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
      "commandId": 4165620575668529,
@@ -207,12 +154,64 @@
       "_sqldf"
      ]
     },
-    "pythonIndentUnit": 4
+    "pythonIndentUnit": 2
    },
-   "notebookName": "generate_partitions",
+   "notebookName": "generate_partitions_sql",
    "widgets": {
+    "ctrl_catalog": {
+     "currentValue": "lakefed_ingest",
+     "nuid": "46e9143a-0aaf-46e5-931f-a581d62f8b86",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "lakefed_ingest",
+      "label": "",
+      "name": "ctrl_catalog",
+      "options": {
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "defaultValue": "lakefed_ingest",
+      "label": "",
+      "name": "ctrl_catalog",
+      "options": {
+       "autoCreated": false,
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
+     }
+    },
+    "ctrl_schema": {
+     "currentValue": "default",
+     "nuid": "9a623c39-d123-48a7-9c97-a2aa6887d249",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "default",
+      "label": "",
+      "name": "ctrl_schema",
+      "options": {
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "defaultValue": "default",
+      "label": "",
+      "name": "ctrl_schema",
+      "options": {
+       "autoCreated": false,
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
+     }
+    },
     "partition_col": {
-     "currentValue": "ss_item_sk",
+     "currentValue": "inv_item_sk",
      "nuid": "6ade68b1-9b6e-4f24-8424-00fe1fe56e6f",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -220,25 +219,25 @@
       "label": "",
       "name": "partition_col",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "partition_col",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "partition_size_mb": {
-     "currentValue": "128",
+     "currentValue": "2048",
      "nuid": "59d185c2-9a7d-4cc6-81ec-0d8f11419a25",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -246,25 +245,25 @@
       "label": "",
       "name": "partition_size_mb",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "partition_size_mb",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_catalog": {
-     "currentValue": "tpcds",
+     "currentValue": "lakefed_sqlserver",
      "nuid": "43162f1f-e929-4cc0-a409-1d3cee631306",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -272,25 +271,25 @@
       "label": "",
       "name": "src_catalog",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_catalog",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_schema": {
-     "currentValue": "sf_1000_liquid",
+     "currentValue": "dbo",
      "nuid": "a6899bbd-325f-489c-bb0d-595842d6dd68",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -298,25 +297,25 @@
       "label": "",
       "name": "src_schema",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_schema",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_table": {
-     "currentValue": "store_sales",
+     "currentValue": "inventory",
      "nuid": "ef4840b7-0a26-4b5f-ae8a-2aae7ed09a0d",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -324,25 +323,25 @@
       "label": "",
       "name": "src_table",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_table",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_type": {
-     "currentValue": "delta",
+     "currentValue": "sqlserver",
      "nuid": "0f478c51-6683-407b-ba81-8eedd2e807b5",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -350,7 +349,6 @@
       "label": "",
       "name": "src_type",
       "options": {
-       "widgetDisplayType": "Dropdown",
        "choices": [
         "sqlserver",
         "oracle",
@@ -360,17 +358,16 @@
         "delta"
        ],
        "fixedDomain": true,
-       "multiselect": false
+       "multiselect": false,
+       "widgetDisplayType": "Dropdown"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "dropdown",
       "defaultValue": "delta",
       "label": "",
       "name": "src_type",
       "options": {
-       "widgetType": "dropdown",
        "autoCreated": false,
        "choices": [
         "sqlserver",
@@ -379,8 +376,10 @@
         "redshift",
         "synapse",
         "delta"
-       ]
-      }
+       ],
+       "widgetType": "dropdown"
+      },
+      "widgetType": "dropdown"
      }
     },
     "tgt_catalog": {
@@ -392,21 +391,21 @@
       "label": "",
       "name": "tgt_catalog",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_catalog",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "tgt_schema": {
@@ -418,21 +417,21 @@
       "label": "",
       "name": "tgt_schema",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_schema",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "tgt_table": {
@@ -444,21 +443,21 @@
       "label": "",
       "name": "tgt_table",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_table",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     }
    }
@@ -469,7 +468,7 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "name": "sql"
   }
  },
  "nbformat": 4,
