--- a/notebooks/table_profiler_sqlserver.ipynb
+++ b/notebooks/table_profiler_sqlserver.ipynb
@@ -107,7 +107,7 @@
    },
    "source": [
     "### Step 1: Identify Candidate Columns\n",
-    "First, we identify indexed columns that could be good partition candidates. We automatically exclude primary keys and unique indexes."
+    "First, we identify indexed columns that could be good partition candidates."
    ]
   },
   {
