Update variable and formatting

--- a/notebooks/table_profiler_sqlserver.ipynb
+++ b/notebooks/table_profiler_sqlserver.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "01e56825-bb39-4607-9b73-f3c237655cc5",
      "showTitle": false,
@@ -91,7 +94,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "4d1ff425-f00e-4db2-b812-0ac324a6493a",
      "showTitle": false,
@@ -252,7 +258,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "042d6a15-cf8e-4a00-85b8-2b2fdd547901",
      "showTitle": false,
@@ -470,7 +479,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "80e44253-b0ec-476e-a2ff-10bc91b907f9",
      "showTitle": false,
@@ -487,7 +499,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d54c8b2c-a715-45df-9ae7-c29fa32d5f4b",
      "showTitle": false,
@@ -587,7 +602,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b00afb5e-2ac4-4a09-bff9-82f27ed13320",
      "showTitle": false,
@@ -634,6 +652,7 @@
     "    # Find ALL columns with the top score\n",
     "        best_score = valid.iloc[0]['score']\n",
     "        top_columns = valid[valid['score'] == best_score]\n",
+    "        best = top_columns.iloc[0]\n",
     "    \n",
     "        if len(top_columns) > 1:\n",
     "            print(f\"\\n MULTIPLE OPTIONS (Score: {best_score}/100)\")\n",
@@ -659,7 +678,6 @@
     "            \n",
     "        else:\n",
     "            # Single best column\n",
-    "            best = top_columns.iloc[0]\n",
     "            print(f\"\\n✅ RECOMMENDED: {best['column_name']}\")\n",
     "    else:\n",
     "        print(\"\\n No suitable partition columns found!\")\n",
@@ -676,14 +694,18 @@
     "    partition_col = '{best['column_name']}',\n",
     "    partition_size_mb = 2048,\n",
     "    load_partitioned = true\n",
-    "WHERE src_table = '{src_catalog}.{src_schema}.{src_table}';\n",
+    "WHERE src_table = '{src_catalog}\n",
+    "AND src_schema = '{src_schema}'\n",
+    "AND src_table = '{src_table}';\n",
     "\"\"\")\n",
     "    else:\n",
     "        print(f\"\"\"\n",
     "UPDATE control_table\n",
     "SET \n",
     "    load_partitioned = false  -- No suitable partition column\n",
-    "WHERE src_table = '{src_catalog}.{src_schema}.{src_table}';\n",
+    "WHERE src_table = '{src_catalog}\n",
+    "AND src_schema = '{src_schema}'\n",
+    "AND src_table = '{src_table}';\n",
     "\"\"\")\n",
     "\n",
     "print(\"\\n\" + \"=\" * 60)\n",
@@ -708,7 +730,7 @@
    "notebookName": "table_profiler_sqlserver",
    "widgets": {
     "connection_name": {
-     "currentValue": "sqlserver_edwia",
+     "currentValue": "lakefed_sqldb",
      "nuid": "340768eb-6e60-4ac6-85a6-f215d8f7df0d",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -734,7 +756,7 @@
      }
     },
     "sql_database": {
-     "currentValue": "DatabricksTestDB",
+     "currentValue": "lakefed",
      "nuid": "65162289-356f-4952-a8d9-8284590d70bc",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -760,7 +782,7 @@
      }
     },
     "src_catalog": {
-     "currentValue": "sqlserver_edwia_catalog",
+     "currentValue": "lakefed_sqlserver",
      "nuid": "361315fc-07cc-4324-a133-991dd63e357e",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -812,7 +834,7 @@
      }
     },
     "src_table": {
-     "currentValue": "test_write",
+     "currentValue": "inventory",
      "nuid": "b7fa467f-39ad-44a2-9035-23e8c95634ad",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -838,7 +860,7 @@
      }
     },
     "use_sampling": {
-     "currentValue": "false",
+     "currentValue": "true",
      "nuid": "fd6ea3e7-5a0f-4a73-a9c2-66052f618960",
      "typedWidgetInfo": {
       "autoCreated": false,
