--- a/src/lakefed_ingest/copy_data_partitioned.ipynb
+++ b/src/lakefed_ingest/copy_data_partitioned.ipynb
@@ -31,7 +31,7 @@
     "-- Build query string using parameters and where_clause variable\n",
     "set var qry_str = \n",
     "    'insert into ' || :tgt_catalog || '.' || :tgt_schema || '.' || :tgt_table || ' ' ||\n",
-    "    'select * from ' || :src_catalog || '.' || :src_schema || '.' || :src_table || ' ' ||\n",
+    "    'select ' || :select_list || ' from ' || :src_catalog || '.' || :src_schema || '.' || :src_table || ' ' ||\n",
     "    'with(fetchSize = 200000) where ' || where_clause;\n",
     "\n",
     "execute immediate qry_str;"
