--- a/src/lakefed_ingest/create_sink_table.ipynb
+++ b/src/lakefed_ingest/create_sink_table.ipynb
@@ -18,18 +18,46 @@
    },
    "outputs": [],
    "source": [
+    "-- create sink table using schema inferred from source table\n",
+    "-- column mapping is enabled to accomodate characters that are not allowed by parquet\n",
+    "-- https://docs.databricks.com/aws/en/delta/column-mapping\n",
+    "\n",
     "declare or replace qry_str string;\n",
+    "declare or replace col_list string;\n",
     "\n",
     "create catalog if not exists identifier(:tgt_catalog);\n",
     "use catalog identifier(:tgt_catalog);\n",
     "create schema if not exists identifier(:tgt_schema);\n",
     "use schema identifier(:tgt_schema);\n",
     "\n",
-    "-- Create sink table using schema inferred from foreign table\n",
+    "set var col_list = (\n",
+    "  select\n",
+    "    concat_ws(\n",
+    "      ', ',\n",
+    "      collect_list(concat('`', col_name, '`', ' ', col_type))\n",
+    "    ) as column_list\n",
+    "  from (\n",
+    "    select\n",
+    "      col.name       as col_name,\n",
+    "      col.type.name  as col_type\n",
+    "    from (\n",
+    "      select\n",
+    "        explode(\n",
+    "          from_json(\n",
+    "            json_str,\n",
+    "            'struct<columns: array<struct<name: string, type: struct<name: string>>>>'\n",
+    "          ).columns\n",
+    "        ) as col\n",
+    "      from (values (:src_tbl_metadata)) as t(json_str)\n",
+    "    )\n",
+    "  )\n",
+    ");\n",
+    "\n",
     "set var qry_str = \n",
-    "  \"create table if not exists \" || :tgt_table || \" as \"\n",
-    "  \"select \" || :select_list || \" from \" || :src_catalog || '.' || :src_schema || '.' || :src_table || \" \"  \n",
-    "  \"where 1 = 0\";\n",
+    "  'create table if not exists ' || :tgt_table || ' (' || col_list || ')'\n",
+    "  'tblproperties('\n",
+    "    '\\'delta.columnMapping.mode\\' = \\'name\\''\n",
+    "  ')';\n",
     "\n",
     "execute immediate qry_str;"
    ]
@@ -131,21 +159,21 @@
       "label": null,
       "name": "enable_iceberg_reads",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": null,
       "name": "enable_iceberg_reads",
       "options": {
-       "widgetType": "text",
        "autoCreated": true,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "select_list": {
@@ -157,21 +185,21 @@
       "label": "",
       "name": "select_list",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "*",
       "label": "",
       "name": "select_list",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "sink_cluster_cols": {
@@ -183,21 +211,21 @@
       "label": null,
       "name": "sink_cluster_cols",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": null,
       "name": "sink_cluster_cols",
       "options": {
-       "widgetType": "text",
        "autoCreated": true,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_catalog": {
@@ -209,21 +237,21 @@
       "label": "",
       "name": "src_catalog",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_catalog",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_schema": {
@@ -235,21 +263,21 @@
       "label": "",
       "name": "src_schema",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_schema",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_table": {
@@ -261,21 +289,21 @@
       "label": "",
       "name": "src_table",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_table",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "tgt_catalog": {
@@ -287,21 +315,21 @@
       "label": "",
       "name": "tgt_catalog",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_catalog",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "tgt_schema": {
@@ -313,21 +341,21 @@
       "label": "",
       "name": "tgt_schema",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_schema",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "tgt_table": {
@@ -339,21 +367,21 @@
       "label": "",
       "name": "tgt_table",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_table",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     }
    }
