add truncate for partitioned copy

--- a/src/lakefed_ingest/create_sink_table.ipynb
+++ b/src/lakefed_ingest/create_sink_table.ipynb
@@ -133,6 +133,36 @@
     "  end if;\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "25cfa242-4325-48ea-a824-483010b4741d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Truncate target table if performing partitioned copy\n",
+    "-- Partitioned copy is used for full loads, so truncation is needed to avoid duplicates in the target\n",
+    "begin\n",
+    "  declare qry_str string;\n",
+    "  declare load_partitioned boolean;\n",
+    "  set load_partitioned = cast(:load_partitioned as boolean);\n",
+    "\n",
+    "  if load_partitioned is true then\n",
+    "    set qry_str =\n",
+    "      'truncate table ' || :tgt_catalog || '.' || :tgt_schema || '.' || :tgt_table;\n",
+    "    execute immediate qry_str;\n",
+    "  end if;\n",
+    "end"
+   ]
   }
  ],
  "metadata": {
@@ -159,21 +189,47 @@
       "label": null,
       "name": "enable_iceberg_reads",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "",
       "label": null,
       "name": "enable_iceberg_reads",
       "options": {
+       "widgetType": "text",
        "autoCreated": true,
-       "validationRegex": null,
-       "widgetType": "text"
+       "validationRegex": null
+      }
+     }
+    },
+    "load_partitioned": {
+     "currentValue": "",
+     "nuid": "e915617f-8c59-4229-be4d-8c8975013206",
+     "typedWidgetInfo": {
+      "autoCreated": true,
+      "defaultValue": "",
+      "label": null,
+      "name": "load_partitioned",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
-      "widgetType": "text"
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "load_partitioned",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": true,
+       "validationRegex": null
+      }
      }
     },
     "select_list": {
@@ -185,21 +241,21 @@
       "label": "",
       "name": "select_list",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "*",
       "label": "",
       "name": "select_list",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "sink_cluster_cols": {
@@ -211,21 +267,21 @@
       "label": null,
       "name": "sink_cluster_cols",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "",
       "label": null,
       "name": "sink_cluster_cols",
       "options": {
+       "widgetType": "text",
        "autoCreated": true,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "src_catalog": {
@@ -237,21 +293,21 @@
       "label": "",
       "name": "src_catalog",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_catalog",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "src_schema": {
@@ -263,21 +319,21 @@
       "label": "",
       "name": "src_schema",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_schema",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "src_table": {
@@ -289,21 +345,21 @@
       "label": "",
       "name": "src_table",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_table",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "tgt_catalog": {
@@ -315,21 +371,21 @@
       "label": "",
       "name": "tgt_catalog",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_catalog",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "tgt_schema": {
@@ -341,21 +397,21 @@
       "label": "",
       "name": "tgt_schema",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_schema",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     },
     "tgt_table": {
@@ -367,21 +423,21 @@
       "label": "",
       "name": "tgt_table",
       "options": {
-       "validationRegex": null,
-       "widgetDisplayType": "Text"
+       "widgetDisplayType": "Text",
+       "validationRegex": null
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
+      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_table",
       "options": {
+       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null,
-       "widgetType": "text"
-      },
-      "widgetType": "text"
+       "validationRegex": null
+      }
      }
     }
    }
