add support for char, varchar, and decimal

--- a/src/lakefed_ingest/create_sink_table.ipynb
+++ b/src/lakefed_ingest/create_sink_table.ipynb
@@ -39,13 +39,17 @@
     "  from (\n",
     "    select\n",
     "      col.name       as col_name,\n",
-    "      col.type.name  as col_type\n",
+    "      case\n",
+    "        when col.type.name in ('char', 'varchar') then concat(col.type.name, '(', col.type.length, ')') \n",
+    "        when col.type.name = 'decimal' then concat(col.type.name, '(', col.type.precision, ',', col.type.scale, ')')\n",
+    "        else col.type.name\n",
+    "      end as col_type\n",
     "    from (\n",
     "      select\n",
     "        explode(\n",
     "          from_json(\n",
     "            json_str,\n",
-    "            'struct<columns: array<struct<name: string, type: struct<name: string>>>>'\n",
+    "            'struct<columns: array<struct<name: string, type: struct<length: bigint, name: string, precision: bigint, scale: bigint>>>>'\n",
     "          ).columns\n",
     "        ) as col\n",
     "      from (values (:src_tbl_metadata)) as t(json_str)\n",
@@ -189,21 +193,21 @@
       "label": null,
       "name": "enable_iceberg_reads",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": null,
       "name": "enable_iceberg_reads",
       "options": {
-       "widgetType": "text",
        "autoCreated": true,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "load_partitioned": {
@@ -215,21 +219,21 @@
       "label": null,
       "name": "load_partitioned",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": null,
       "name": "load_partitioned",
       "options": {
-       "widgetType": "text",
        "autoCreated": true,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "select_list": {
@@ -241,21 +245,21 @@
       "label": "",
       "name": "select_list",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "*",
       "label": "",
       "name": "select_list",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "sink_cluster_cols": {
@@ -267,21 +271,21 @@
       "label": null,
       "name": "sink_cluster_cols",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": null,
       "name": "sink_cluster_cols",
       "options": {
-       "widgetType": "text",
        "autoCreated": true,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_catalog": {
@@ -293,21 +297,21 @@
       "label": "",
       "name": "src_catalog",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_catalog",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_schema": {
@@ -319,21 +323,21 @@
       "label": "",
       "name": "src_schema",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_schema",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "src_table": {
@@ -345,21 +349,21 @@
       "label": "",
       "name": "src_table",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "src_table",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "tgt_catalog": {
@@ -371,21 +375,21 @@
       "label": "",
       "name": "tgt_catalog",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_catalog",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "tgt_schema": {
@@ -397,21 +401,21 @@
       "label": "",
       "name": "tgt_schema",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_schema",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "tgt_table": {
@@ -423,21 +427,21 @@
       "label": "",
       "name": "tgt_table",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": "",
       "name": "tgt_table",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     }
    }
